# yolov5ncnn

./: CMakeLists.txt  YoloV5_ncnn.sln
YoloV5_ncnn/: YoloV5.cpp  YoloV5Focus.h  YoloV5_ncnn.vcxproj  YoloV5_ncnn.vcxproj.filters  ncnn_release.props  vulkan.props  yolov5s.param
YoloV5_ncnn/x64/Release/YoloV5_ncnn.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  YoloV5_ncnn.lastbuildstate  YoloV5_ncnn.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: YoloV5.cpp  YoloV5Focus.cpp
x64/Release/: YoloV5_ncnn.iobj  YoloV5_ncnn.ipdb
